desain beranda dan produk

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.teknisionline">
+   <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="teknisionline"
         android:name="${applicationName}"
@@ -30,5 +31,5 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-    </application>
+     </application>
 </manifest>
