--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,10 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/repair.png
+    - assets/dompet.png
+    - assets/pemanggilan.png
+    - assets/telepon.png
+    - assets/bantuan.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
