--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.teknisionline">
+    package="com.example.sitech_online">
    <uses-permission android:name="android.permission.INTERNET" />
    <application
-        android:label="teknisionline"
+        android:label="sitech_online"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
