--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: teknisionline
+name: sitech_online
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -63,12 +63,13 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - assets/teknisionline.png
+    - assets/sitechonline.png
     - assets/dompet.png
     - assets/pemanggilan.png
     - assets/telepon.png
     - assets/bantuan.png
     - assets/komputer.png
+    - assets/user.png
     - assets/wallpaper.jpg
     - assets/logodana.png
     - assets/logogopay.png
